--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ h2 {
     margin: 20px;
     gap: 5px;
     border: 2px solid rgb(146, 207, 231);
+    transition: all 2.5 ease-in;
 }
 .flex {
     display: flex;
