--- a/style.css
+++ b/style.css
@@ -1,12 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 .container {
     min-width: 300px;
     min-height: 200px;
     background-color: rgb(12, 12, 12);
     color: red;
 }
+h1 {
+    text-align: center;
+    margin-top: 5px;
+    background-color: #242533;
+    color: aquamarine;
+    text-transform: capitalize;
+}
 h2 {
-    font-size: x-large;
-    font-family: monospace;
+    font-size: large;
+    /* font-family: "Poppins", monospace, sans-serif; */
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     word-wrap:break-word;
     overflow: auto;
     word-spacing: 50%;
